add font family

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <link href="/vite.svg" rel="icon" type="image/svg+xml" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Vite + React</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+    rel="stylesheet">
 </head>
+
 <body class="bg-violet-100 text-stone-900">
-<div id="root"></div>
-<script src="/src/main.jsx" type="module"></script>
+  <div id="root"></div>
+  <script src="/src/main.jsx" type="module"></script>
 </body>
+
 </html>
